2006-02-17  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:
	* events/ppc64/power5+/events:
	* events/ppc64/power5+/event_mappings:
	* events/ppc64/unit_masks:
	* events/Makefile.am:
	* libop/op_events.c:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* utils/opcontrol:
	* utils/ophelp.c:  Add support for Power5+

2005-02-10  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Use full paths for which and dirname.

2006-01-22  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: mention 2.4 + power management

2006-01-16  Mike Carlson  <corfe83dev@gmail.com>

	* doc/opcontrol.1.in: fix typo

2006-01-16  Jose Renato Santos  <jsantos@hpl.hp.com>

	* daemon/init.c:
	* daemon/opd_interface.h:
	* daemon/opd_kernel.h:
	* daemon/opd_kernel.c:
	* daemon/opd_trans.c:
	* daemon/oprofiled.h:
	* daemon/oprofiled.c:
	* doc/opcontrol.1.in:
	* utils/opcontrol: Added support for Xen

See ChangeLog-2005 for earlier changelogs.